--- a/style_ind_specific_v3.css
+++ b/style_ind_specific_v3.css
@@ -4,7 +4,9 @@ html {
     -webkit-text-size-adjust: 100%;
     height: 100%;
 }
-
+.result-wrapper .switch-wrapper { 
+    width: auto !important;
+}
 .search-result-item-new {
     padding-top: 50px;
 }
